<resources>
    <string name="app_name">Notes by Adrial Rework</string>
    <string name="notes_by_adrial">Notes by Adrial</string>
    <string name="login_with_your_credentials_to_continue">Login with your credentials to continue</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="by_adrial">by adrial</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="search_notes">Search Notes</string>
    <string name="lorem_note">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="card_template">Card Template</string>
    <string name="fill_please">Fill before proceeding</string>
    <string name="back_button">back button</string>
    <string name="profile">Profile</string>
    <string name="example_text">Example Text</string>
    <string name="example_gmail">example@gmail.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="pass_match">Passwords do not match</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_button">update button</string>
    <string name="delete_button">delete button</string>
</resources>