<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/registerbackbutton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            android:layout_margin="20dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/back_button" />

        <TextView
            android:id="@+id/registertoptext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppinsregular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginTop="80dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registertoptext"
            android:layout_marginHorizontal="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="16sp"
                android:textColor="@color/grey"
                android:fontFamily="@font/poppinsregular" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:theme="@style/TextInputLayout_overlay">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name_register"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/edit_text_background"
                    android:textSize="20sp"
                    android:ems="20" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="16sp"
                android:textColor="@color/grey"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppinsregular" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:theme="@style/TextInputLayout_overlay">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email_register"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/edit_text_background"
                    android:textSize="20sp"
                    android:ems="20" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="16sp"
                android:textColor="@color/grey"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppinsregular" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                app:passwordToggleEnabled="true"
                android:theme="@style/TextInputLayout_overlay">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password_register"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/edit_text_background"
                    android:inputType="textPassword"
                    android:textSize="20sp"
                    android:ems="20" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:textSize="16sp"
                android:textColor="@color/grey"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppinsregular" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                app:passwordToggleEnabled="true"
                android:theme="@style/TextInputLayout_overlay">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ett_password_confirm_register"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/edit_text_background"
                    android:inputType="textPassword"
                    android:textSize="20sp"
                    android:ems="20" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/registersave"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:text="@string/save"
            android:fontFamily="@font/poppinsregular"
            android:backgroundTint="@color/teal_login"
            android:layout_margin="30dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>