<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relativelayoutlogin"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:src="@mipmap/loginrectangle"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="30dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/loginbyadrial"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity=""
                    android:text="@string/notes_by_adrial"
                    android:textSize="34sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppinsregular" />

                <TextView
                    android:id="@+id/credentialsrequest"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/login_with_your_credentials_to_continue"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppinsregular" />

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical"
            android:gravity="center_vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/relativelayoutlogin"
            android:layout_marginHorizontal="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="16sp"
                android:textColor="@color/grey"
                android:fontFamily="@font/poppinsregular" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:fontFamily="@font/poppinsregular"
                android:theme="@style/TextInputLayout_overlay">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:textSize="20sp"
                    android:ems="20" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="16sp"
                android:textColor="@color/grey"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppinsregular" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:fontFamily="@font/poppinsregular"
                app:passwordToggleEnabled="true"
                android:theme="@style/TextInputLayout_overlay">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:textSize="20sp"
                    android:ems="20" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:orientation="vertical"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/buttontohome"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/login"
                android:fontFamily="@font/poppinsregular"
                android:textStyle="bold"
                android:backgroundTint="@color/teal_login" />


            <Button
                android:id="@+id/buttontoregister"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/register"
                android:textColor="@color/black"
                android:fontFamily="@font/poppinsregular"
                android:textStyle="bold"
                android:backgroundTint="@color/white" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>